testData/inspections/unused-label/deleteLabelFix.go
package main

func _() {
<error descr="Unused label 'UnusedLabel'">Un<caret>usedLabel</error>:
    println("unused")
}